# fast_io

./: .gitignore  CMakeLists.txt  fmt-benchmark_result.txt  license.txt  readme.md
benchmarks/: CMakeLists.txt  input_10M_double.cc  input_10M_size_t.cc  output_10M_double.cc  output_10M_size_t.cc  output_10M_size_t_rdm.cc  timer.h
benchmarks/0000.10m_size_t/: fast_io_vs_fmt.cc  fast_io_vs_fmt_rdm.cc  fast_io_vs_fmt_size_t.cc  fast_io_vs_fmt_size_t_raw.cc  filebuf_io_observer.cc  input_10M_size_t.cc  input_legacy.cc  legacy.cc  no_teststd_output_10M_size_t.cc  omap.cc  output_10M_size_t.cc  output_10M_size_t_no_teststd.cc  simin.cc  win32_vs_posix_vs_c_file.cc
benchmarks/0001.10m_double/: fast_io_vs_fmt.cc  grisu_exact_vs_ryu.cc  grisu_exact_vs_ryu_newstring.cc  grisu_exact_vs_ryu_string.cc  input_10M_double.cc  input_10M_double_charconv.cc  no_teststd_output_10M_double.cc  no_teststd_output_10M_double_no_neg.cc  output_10M_double.cc  output_10M_double_scientific.cc  output_10M_double_withstdioandstream.cc
benchmarks/0002.transmit/: generate_large_file  generate_large_file.cc  transmit  transmit.cc
benchmarks/0003.async_tcp_echo_server/: client.cc  multiprocess.cc  multiprocess_client.cc  server.cc
benchmarks/0003.async_tcp_server/: client.cc  server.cc
benchmarks/0004.benchmark_provides_by_other_people/: cpp_io_bench.cc
benchmarks/0005.standardlibrary_bench/: isspace.cc
benchmarks/0006.exception_vs_syscall/: exception.cc  syscall.cc
benchmarks/0006.string/: charconv_vs_ospan.cc
benchmarks/0007.isspace/: isspace.cc
benchmarks/0008.width/: c_file.cc  c_file_unlocked.cc  filebuf_io_observer.cc  obuf_file.cc
benchmarks/0009.fill_nc/: fill_nc.cc
benchmarks/0010.stack_overflow/: whystream.cc
benchmarks/0016.binary_size/: boost_iostreams.cc  fast_io.cc
benchmarks/0018.concat/: add.cc  concat.cc
benchmarks/0020.utf/: fill_nc.cc  fill_ns.cc
benchmarks/0021.iconv/: universal.cc
benchmarks/0022.rust_vs_fast_io/: Cargo.toml
benchmarks/0023.constant/: code_generator.cc  fast_io.cc  fast_io.s  fmt.cc  fmt.s  generate10k.cc  printf.cc  printf.s
benchmarks/0024.pointer_value/: fprintf.cc  ofstream.cc  print.cc  print_pointer.cc
examples/: CMakeLists.txt
examples/0000.Hello World/: compile  compile.cc  hello_world.cc  hello_world0.cc  hello_world2.cc  hello_world3.cc  hello_world_format.cc
examples/0000.compile/: fast_io  fast_io.cc  fast_io_device.cc  fast_io_in.cc  fast_io_legacy.cc  fast_io_network.cc
examples/0001.file io/: file_hello_world.cc  mutex_file_hello_world.cc
examples/0001.helloworld/: 0.cc  four.cc  hello_world_win32_box.cc  hw.cc  hw_long.cc  hw_u8.cc
examples/0002.a+b/: base36.cc  base36upper.cc  base36upper_sgn.cc  bin.cc  dec.cc  dectext.cc  floating.cc  hex.cc  hexupper.cc  sgn.cc  string.cc  uint128_t.cc
examples/0002.input string/: inputstring.cc  inputstring_with_eof.cc
examples/0003.a+b/: a+b.cc  a+b1.cc  a+b2.cc
examples/0003.floating_point/: all.cc  all_comma.cc  comma.cc  comma_pi.cc  comma_precision.cc  fixed.cc  fixed_precision.cc  fp.cc  general.cc  hv.cc  roundtrip1.cc  roundtrip2.cc  sanshengage.cc  scientific.cc  scientific_precision.cc
examples/0004.convert/: size_t_to_string.cc  size_t_to_string_ostring_directly.cc  string_to_size_t.cc  string_to_size_t_istring_view_directly.cc
examples/0004.string/: concat.cc  hello_kate.cc  hello_kate_concat.cc  hello_kate_concat_more.cc  hello_kate_ostring_ref.cc  stringa+b.cc
examples/0005.file_io/: file_hw.cc
examples/0005.runtime_open_mode/: runtime_c_style_open_mode.cc  runtime_open_mode.cc
examples/0006.compile_time_open_mode/: compile_time_open_mode.cc
examples/0006.datetime/: 1ms.cc  current_time.cc
examples/0007.legacy/: a+b.cc  c_fd.cc  c_file.cc  c_file_cookie.cc  c_file_cookie_cpp_cout.cc  c_file_cookie_obuf.cc  c_file_cookie_stdout.cc  c_file_from_posix_file.cc  c_file_from_posix_io_handle.cc  c_stdout.cc  c_style.cc  c_style_from_native.cc  c_style_from_posix.cc  c_style_from_win32.cc  cpp_cout.cc  fast_io_as_stream.cc  fast_io_iostream_ref.cc  filebuf.cc  fout.cc  hello_world_c_stdout.cc  open_c_style_file_from_posix_file.cc  open_c_style_file_from_posix_io_handle.cc  open_c_style_file_from_posix_out.cc  open_c_style_unlocked_file_from_posix_out.cc  posix_from_win32.cc  stream_fd.cc  stream_file.cc  stream_file_from_win32.cc  streambuf_io_observer.cc
examples/0008.binary_serialization/: binary_serialization.cc  custom_binary_serialization_type.cc
examples/0008.dns/: dns.cc
examples/0009.floating point/: double_default.cc  double_fixed.cc  double_scientific.cc  floating_view.cc  s2d.cc  s2d_int_hint.cc  standard_body_weight.cc
examples/0009.transmit/: http_test_zero_copy.cc  transmit.cc  transmit_bytes.cc  transmit_to_c_stdout.cc  transmit_use_manip.cc
examples/0010.http/: http.cc  http_header_test.cc  http_request.txt  http_test_zero_copy.cc  request_header.txt
examples/0010.manip/: setw.cc
examples/0011.black_hole/: black_hole.cc
examples/0011.tie/: tie.cc
examples/0012.debug/: debug_box.cc  debug_helloworld.cc
examples/0012.ucs/: emoji.cc  hello_ucs_world.cc  test_ucs.cc  ucs.cc
examples/0013.incorrect examples/: multithread_sync.cc  outputline.cc  speck_cbc_ucs_server.cc
examples/0013.tcp/: client.cc  server.cc
examples/0014.epoll/: coroutine_epoll.cc  epoll.cc
examples/0014.random_password/: random_password.cc
examples/0014.udp/: client.cc  server.cc
examples/0015.udp/: client.cc  server.cc
examples/0016.concat/: concat.cc
examples/0016.process/: posix_process.cc  process.cc  transmit.cc  win32_process.cc
examples/0017.tcp_multiprocess_async/: client.cc  server.cc  server_child_process.cc
examples/0018.base/: base.cc  base25a+b.cc  base36a+b.cc  base3a+b.cc  hexa+b.cc
examples/0018.tcp_thread_pool/: coroutine_server.cc  server.cc
examples/0019.posix/: win32.cc
examples/0019.random_access/: random_access.cc
examples/0019.win32/: nt.cc
examples/0020.dynamic/: dynamic.cc
examples/0020.third_party/: mfc.cc
examples/0021.benchmark/: charconv.cc  copy.cc  (+19 more)
testsuites/: CMakeLists.txt  timer.h
(+888 files in other folders)
